Add movement classes:  - Add Move.java as a value object to describe a move  - Add Direction.java, a enum class which lists all moves  - Add Position.java where a position gets saved. Here the implementation    of a move into a direction is written  - Add PositionTest.java to tests Position.java  - Add a Grid.java and an implementation of this interface     DefaultChessGrid.java without any content yet.  - Updated/Fix package structure