@@ -2,6 +2,12 @@ plugins {
   id 'java'
 }
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile).all {
+  options.compilerArgs += ['--enable-preview']
+}
+
 group 'de.qetz'
 version '0.1.0'
 
@@ -10,6 +16,7 @@ repositories {
 }
 
 dependencies {
+  compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
   compile group: 'com.google.inject', name: 'guice', version: '4.2.3'
 
   testCompile group: 'junit', name: 'junit', version: '4.12'
